--- a/MyUniversity.Dal/MyUniversity.Dal.csproj
+++ b/MyUniversity.Dal/MyUniversity.Dal.csproj
@@ -78,6 +78,14 @@
     <Compile Include="Migrations\201601111406589_UpdateDepartmentOfficeAssignments.Designer.cs">
       <DependentUpon>201601111406589_UpdateDepartmentOfficeAssignments.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201601120951372_AddVirtualIntoCourse.cs" />
+    <Compile Include="Migrations\201601120951372_AddVirtualIntoCourse.Designer.cs">
+      <DependentUpon>201601120951372_AddVirtualIntoCourse.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201601120955201_AddVirtualIntoOthers.cs" />
+    <Compile Include="Migrations\201601120955201_AddVirtualIntoOthers.Designer.cs">
+      <DependentUpon>201601120955201_AddVirtualIntoOthers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Repositories\Contracts\IEnrollmentRepository.cs" />
     <Compile Include="Entities\OfficeAssignment.cs" />
     <Compile Include="Entities\Profile.cs" />
@@ -168,6 +176,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201601111406589_UpdateDepartmentOfficeAssignments.resx">
       <DependentUpon>201601111406589_UpdateDepartmentOfficeAssignments.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601120951372_AddVirtualIntoCourse.resx">
+      <DependentUpon>201601120951372_AddVirtualIntoCourse.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201601120955201_AddVirtualIntoOthers.resx">
+      <DependentUpon>201601120955201_AddVirtualIntoOthers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
