--- a/MyUniversity.Api/packages.config
+++ b/MyUniversity.Api/packages.config
@@ -6,9 +6,11 @@
   <package id="FluentNHibernate" version="2.0.1.0" targetFramework="net45" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="log4net" version="2.0.5" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.7.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
